ieeextreme multilingual support and navbar fixes

--- a/src/app/newieeextreme/newieeextreme.component.html
+++ b/src/app/newieeextreme/newieeextreme.component.html
@@ -19,22 +19,22 @@
             <div class="row">
               <div class="col-sm">
                   <h1>10</h1>
-                  <h3 class="facts">Ediciones realizadas</h3>
+                  <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
               </div>
               <div class="dottedlineright"></div>
               <div class="col-sm">
                     <h1>70+</h1>
-                    <h3 class="facts">Participantes año 2019</h3>
+                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.PARTICIPANTS' | translate }}</h3>
               </div>
               <div class="dottedlineright"></div>
               <div class="col-sm">
                     <h1>15</h1>
-                    <h3 class="facts">Equipos top 500/8000</h3>
+                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.TOPTEAMS' | translate }}</h3>
               </div>
               <div class="dottedlineright"></div>
               <div class="col-sm">
                     <h1>24hs</h1>
-                    <h3 class="facts">de competencia</h3>
+                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.HOURS' | translate }}</h3>
               </div>
             </div>
         </div>
@@ -45,8 +45,8 @@
         <div class="container">
             <div class="row">
               <div class="col-sm">
-                <h2>¡Resolvé problemas en equipo!</h2>
-                <div class="transparent">La IEEExtreme programming competition es una competencia de programación de 24 hs donde competidores de distintas universidades y carreras dedican gran esfuerzo y motivación en pos de incrementar su habilidad de resolver problemas en equipo y pasar un gran momento.</div>
+                <h2>{{ 'IEEEXTREME.TEAM.TITLE' | translate }}</h2>
+                <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
               </div>
               <div class="col-sm">
                 <img src="./../../assets/image/teamdisc.png" height="200vmin" alt="Logo ITBA-IEEE">
@@ -56,24 +56,24 @@
     </div>
 
     <!-- Queres participar -->
-    <div class="bottomLine">
+    <div class="bottomLine" id="takepart">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
                     <img src="./../../assets/image/tournament.png" height="200vmin" alt="Logo ITBA-IEEE">
                 </div>
               <div class="col-sm">
-                <h2>¿Querés participar?</h2>
-                <div class="transparent">Abrimos un formulario para aquellos que esten interesados en la competencia de este año, cuando abramos las inscripciones les mandaremos una notificación. ¡Aprovecha el tiempo para conseguir un equipo y entrenar!</div>
+                <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
+                <div class="transparent">{{ 'IEEEXTREME.PARTICIPATE.TEXT' | translate }}</div>
               </div>
             </div>
         </div>
     </div>
 
     <!-- Sponsor 2020 -->
-    <div class="noLine">
+    <div class="noLine" id="sponsorship">
       <h1>Sponsorship 2020</h1>
-      <p class="whitebckg">Para el desarrollo de la competencia requerimos fondos, por lo que estamos en la busqueda de nuevos auspiciantes para nuestro evento. Para más información contactar a cualquier miembro de nuestro equipo de fundraising</p>
+      <p class="whitebckg">{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
               <div class="col-sm">
@@ -106,7 +106,7 @@
 
     <!-- Prev Sponsors -->
     <div class="bottomLine">
-      <h1 class="right">Sponsors que nos han acompañado</h1>
+      <h1 class="right">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
       <div class="container">
         <div class="row" style="margin-top: 2vmin;">
           <div class="col-sm">
