bug fixes and photo adding in main page

--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="titleBar">
-        <button onclick="location.href='index.html'" class="transparentButton" mdbWavesEffect><i class="far fa-arrow-alt-circle-left"></i>&nbsp;<div id="homeText">Home</div></button>
-        <h1>Cursos de Python</h1>
+        <button onclick="location.href='index.html'" class="transparentButton" mdbWavesEffect><i class="fas fa-angle-left"></i>&nbsp;<div id="homeText">Home</div></button>
+        <h1>Cursos Principiante de Python 2020</h1>
     </div>
 
 
