--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -47,7 +47,7 @@
   
       <!-- Competencia -->
       <mdb-card>
-        <mdb-card-img src="./../../assets/image/ieeextreme5.jpg" alt="Foto de Competencia de programacion"></mdb-card-img>
+        <mdb-card-img src="./../../assets/image/competition.jpg" alt="Foto de Competencia de programacion"></mdb-card-img>
         <mdb-card-body>
   
           <mdb-card-title>
@@ -83,7 +83,7 @@
     <!--IEEExtreme-->
     <mdb-card>
       <div class="view overlay waves-light" mdbWavesEffect>
-        <mdb-card-img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%28131%29.jpg"></mdb-card-img>
+        <mdb-card-img src="./../../assets/image/ieee-extreme.jpg" alt="Competicion IEEExtreme"></mdb-card-img>
         <a><div class="mask rgba-white-slight"></div></a>
       </div>
 
@@ -97,7 +97,7 @@
 
         <mdb-card-text>{{ 'HOME.IEEEXTREME.TEXT' | translate }}</mdb-card-text>
   
-        <a class="link-text">
+        <a class="link-text" href="ieeextreme">
           <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
@@ -109,7 +109,7 @@
     <!--Clases de Pyhton-->
     <mdb-card>
       <div class="view overlay waves-light" mdbWavesEffect>
-        <mdb-card-img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%28131%29.jpg"></mdb-card-img>
+        <mdb-card-img src="./../../assets/image/cursopython.jpg" alt="Cursos de Python"></mdb-card-img>
         <a><div class="mask rgba-white-slight"></div></a>
       </div>
 
@@ -123,7 +123,7 @@
 
         <mdb-card-text>{{ 'HOME.CLASSES.TEXT' | translate }}</mdb-card-text>
   
-        <a class="link-text" href="/clasespython">
+        <a class="link-text" href="cursospython">
           <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
