added more photos and wie logo

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -143,7 +143,7 @@
     <!-- WIE -->
     <mdb-card>
       <div class="view overlay waves-light" mdbWavesEffect>
-        <mdb-card-img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%28131%29.jpg"></mdb-card-img>
+        <mdb-card-img src="./../../assets/image/logos/wie.jpg"></mdb-card-img>
         <a><div class="mask rgba-white-slight"></div></a>
       </div>
 
